# Test

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  todo.yml
include/: logging.hpp
src/: globals.cpp  main.cpp  window.cpp
